
* SOLR-16860: Coordinator ZkStateReader's watch is not removed upon collection deletion (Patson Luk)

* SOLR-16861: Coordinator node does not have the correct collection/core in MDCLoggingContext (Patson Luk)

* SOLR-16877: BackupManager now allows ConfigSet "files" to be empty, which previously caused NPEs. (Paul Blanchaert via Houston Putman)

Dependency Upgrades
---------------------
* PR#1494: Upgrade forbiddenapis to 3.5 (Uwe Schindler)

* SOLR-16642: Upgrade to Lucene 9.5.0 (Vinayak Hegde, David Smiley)

* SOLR-16799: upgrade Solr to use Lucene 9.6.0 (Alex Deparvu, Tomás Fernández Löbbe)

* SOLR-16853: Upgrade Lucene to 9.7.0 (Alex Deparvu)

Other Changes
---------------------

* SOLR-16704: Add simple search benchmark to benchmark module (Tomás Fernández Löbbe)

* SOLR-16709: Update Solr's internal use of Solr Client Builders to use TimeUnit parameter for time specific builder methods. (Eric Pugh)

* SOLR-16713: Replace Guava usages with pure Java (Kevin Risden)

* SOLR-16716: Replace commons-io usages with pure Java (Kevin Risden)

* SOLR-16715: Replace new HashMap(int) and new HashSet(int) with CollectionUtil.newHashMap / CollectionUtil.newHashSet (Kevin Risden)

* SOLR-16604: Use Solr Client Builders directly in unit tests instead of delegating to SolrTestCaseJ4. (Eric Pugh, David Smiley)

* SOLR-16507: Change SplitShardCmd to not use NodeStateProvider (Vinayak Hegde, David Smiley)

* SOLR-15703: replace all SolrException.log usage in Solr to just call log.error(...) directly (Kevin Risden)

* PR#1567: Remove deprecated constructor in MetricsMap (janhoy)

* SOLR-16745: Consolidate DelegatedSolrQueryRequest and DelegatingSolrQueryRequest (Kevin Risden)

* PR#1566: Removed deprecated members from Tuple class (janhoy)

* SOLR-16841: Added QueryResponseWriter benchmarks (Alex Deparvu via Tomás Fernández Löbbe)

==================  9.2.1 ==================

Bug Fixes
---------------------