@@ -322,6 +322,8 @@ Bug Fixes
 
 * SOLR-16877: BackupManager now allows ConfigSet "files" to be empty, which previously caused NPEs. (Paul Blanchaert via Houston Putman)
 
+* SOLR-16891: The Admin UI - Cloud - Graph screen now uses the ClusterStatus API as its source of cluster information. (Houston Putman, Tomás Fernández Löbbe)
+
 Dependency Upgrades
 ---------------------
 * PR#1494: Upgrade forbiddenapis to 3.5 (Uwe Schindler)
